fix bugs in dark mode

--- a/src/assets/sass/bounce-to-right.scss
+++ b/src/assets/sass/bounce-to-right.scss
@@ -37,7 +37,7 @@
 	&:hover,
 	&:focus,
 	&:active {
-		color: white;
+		color: white !important;
 	}
 
 	&:hover:before,
